2008-08-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* TypeRocks.cs: Fix parameter type comparison wrt generics.

2008-08-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* InstructionRocks.cs: Add an overload to TraceBack that accept an
	offset. This makes it easier to find all parameters to a method call.

2008-07-24  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleRocks.cs: Exit early from LoadDebuggingSymbols if the symbols
	are already loaded (i.e. the reader was created). This avoid an 
	exception for the wizard since this is called each time a new analysis
	is performed (without the need to reload the assemblies).

2008-07-15  Nestor Salceda  <nestor.salceda@gmail.com>

	* ModuleRocks.cs: Look up the Mono.Cecil.Mdb.dll in the GAC if can't be
	found in the current folder.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Added IsStatic for static types (2.0+). Fixed 
	IsVisible to work when resolving is required (or not possible).

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* InstructionRocks.cs: Change GetOperand to case Ldc_I4_S to an
	integer before returing it since it simplify the rules, e.g. when
	the value is used in a collection.

2008-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* CommonRocks.cs: Change rocks from IList<T> to ICollection<T> 
	since they will be more useful this way.
	* TypeRocks.cs: Avoid exceptions when a Resolve call fails.
	IsDelegate fix by Cedric Vivier.

2008-07-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* InstructionRocks.cs: Add a special case for PopAll so we can
	abort the track back (without an exception). Fix XML documentation
	warning.

2008-07-05  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Add IsLoadElement, IsLoadIndirect and
	TraceBack rocks.

2008-06-29  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Change GetOperand to return a 
	TypeReference when "this" (ldarg_0 in an instance method) is 
	found.
