@@ -35,18 +35,6 @@ namespace Gendarme.Framework.Rocks {
 	public static class FieldRocks {
 
 		/// <summary>
-		/// Check if the field contains an attribute of a specified type.
-		/// </summary>
-		/// <param name="self">The FieldReference on which the extension method can be called.</param>
-		/// <param name="attributeName">Full name of the attribute class</param>
-		/// <returns>True if the field contains an attribute of the same name,
-		/// False otherwise.</returns>
-		public static bool HasAttribute (this FieldReference self, string attributeName)
-		{
-			return self.Resolve ().CustomAttributes.ContainsType (attributeName);
-		}
-
-		/// <summary>
 		/// Check if the field was generated by the compiler or a tool (i.e. not by the developer).
 		/// This can occurs (compiler) with auto-implemented properties (C# 3)
 		/// </summary>
